--- a/templates/index.html
+++ b/templates/index.html
@@ -251,7 +251,7 @@ input[type=file]::file-selector-button:hover {
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 wow fadeInLeft">	
+        <!-- <div class="col-lg-4 wow fadeInLeft">	
 		 <div class="contact_info">
                             <div class="detail">
                                 <h4>Ballet One Page</h4>
@@ -275,7 +275,7 @@ input[type=file]::file-selector-button:hover {
             <li class="pinterest animated bounceIn wow delay-04s"><a href="javascript:void(0)"><i class="fa fa-pinterest"></i></a></li>
             <li class="gplus animated bounceIn wow delay-05s"><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li> 
           </ul>
-        </div>
+        </div> -->
         <div class="col-lg-8 wow fadeInLeft delay-06s">
           <div class="form">       
 				<!--NOTE: Update your email Id in "contact_me.php" file in order to receive emails from your contact form-->
