--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,19 @@ input[type=file]::file-selector-button:hover {
     color: gray; /* Change this color to your desired color */
     margin-left: 5px;
   }
+  #ordbtn{
+	background-color: white;
+	color: blue;
+	padding: 10px;
+	border-radius: 5px;
+	font-size: medium;
+	font-weight: bold;
+  }
+  #ordbtn:hover{
+	text-decoration: none;
+	background-color: orange;
+	color: black;
+  }
 </style>
 <body>
 
@@ -79,7 +92,7 @@ input[type=file]::file-selector-button:hover {
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>Say <strong> Goodbye </strong> to Assignment Stress</h2>
               <p>Let our experts handle your assignments while you focus on what matters most.</p>
-			  <a href="/order" style="background-color: white;color: blue;padding: 10px;border-radius: 5px;font-size: medium;">Make An Order</a>
+			  <a href="/order" id="ordbtn" >Make An Order</a>
                </div>
 			   
           </div>
