--- a/templates/order.html
+++ b/templates/order.html
@@ -73,6 +73,7 @@ input[type=file]::file-selector-button:hover {
       <div class="flex flex-col text-center w-full mb-12" >
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="font-size: x-large;">Make an order</h1>
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Please upload the pdf and provide necessary details below.</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Category: {{category}}</p>
       </div>
       <div class="lg:w-1/2 md:w-2/3 mx-auto">
         <div class="flex flex-wrap -m-2">
