--- a/templates/index.html
+++ b/templates/index.html
@@ -60,13 +60,13 @@ input[type=file]::file-selector-button:hover {
 <header id="header_wrapper">
   <div class="container">
     <div class="header_box">
-      <div class="logo"><a href="#"><img src="static/logo.png" alt="logo" width="300px"></a></div>
+      <div class="logo"><a href="#"><img src="static/logo.png" alt="logo" width="300px" style="filter: invert(100%);margin-top: -5%;margin-bottom: -5%;"></a></div>
 	  <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
-			<ul class="nav navbar-nav" id="mainNav" style="margin-top: 10px;">
+			<ul class="nav navbar-nav" id="mainNav" style="margin-top: 20px;">
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
 			  <li><a href="#service" class="scroll-link">Services</a></li>
@@ -107,7 +107,83 @@ input[type=file]::file-selector-button:hover {
   </div>
 </section>
 <!--Hero_Section--> 
-
+<!--Pricing-->
+<section id="pricing" class="pricing-container page_section"  >
+	<div class="container">
+			    <h2><strong>PRICING</strong></h2>
+    
+				<div class="row"> 				
+					<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="pricing">
+							<div class="pricing-title">
+								<p>Express Lane</p>
+							</div>
+							<div class="pricing-price">
+								<p><sup>₹ </sup>14.00</p>
+							</div>
+							<div class="pricing-features">
+								<p>Work gets completed within 24 hrs.</p>
+								<!-- <p>Clean and modern</p>
+								<p>Bootstrap & HTML5</p>
+								<p>24/7 support</p> -->
+							</div>
+							<div class="pricing_btn">
+								<p><a href="{% url 'index' %}?category=Express Lane">Make an order</a></p>
+							</div>							
+						</div>					
+					</div>
+					<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="pricing">
+							<div class="pricing-title">
+								<p>Fast Lane</p>
+							</div>
+							<div class="pricing-price">
+								<p><sup>₹ </sup>12.00</p>
+							</div>
+							<div class="pricing-features">
+								<p>Work gets completed within 48 hrs.</p>
+							</div>
+							<div class="pricing_btn">
+								<p><a href="{% url 'index' %}?category=Fasts Lane">Make an order</a></p>
+							</div>							
+						</div>					
+					</div>
+					<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="pricing">
+							<div class="pricing-title">
+								<p>Regular Lane</p>
+							</div>
+							<div class="pricing-price">
+								<p><sup>₹ </sup>10.00</p>
+							</div>
+							<div class="pricing-features">
+								<p>Work gets completed within 3 to 4 days.</p>
+							</div>
+							<div class="pricing_btn" style="margin-top: -10%;">
+								<p><a href="{% url 'index' %}?category=Regular Lane">Make an order</a></p>
+							</div>							
+						</div>					
+					</div>
+					<div class="col-md-3 col-sm-3 col-xs-12">
+						<div class="pricing">
+							<div class="pricing-title">
+								<p>Diagrams</p>
+							</div>
+							<div class="pricing-price">
+								<p><sup>₹ </sup>2.00 to 5.00</p>
+							</div>
+							<div class="pricing-features">
+								<p>Diagrams</p>
+							</div>
+							<div class="pricing_btn">
+								<p><a href="/order">Make an order</a></p>
+							</div>							
+						</div>					
+					</div>	
+				</div><!--- END ROW -->
+			</div><!--- END CONTAINER -->
+		</section>
+<!--Pricing-->
 <section id="aboutUs"><!--Aboutus-->
 <div class="inner_wrapper">
   <div class="container">
@@ -166,83 +242,7 @@ input[type=file]::file-selector-button:hover {
 </section>
 <!--Service-->
 
-<!--Pricing-->
-<section id="pricing" class="pricing-container page_section"  >
-	<div class="container">
-			    <h2><strong>PRICING</strong></h2>
-    <h6>Lorem ipsum dolor sit amet, consectetur adipiscing.</h6>
-				<div class="row"> 				
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="pricing">
-							<div class="pricing-title">
-								<p>Express Lane</p>
-							</div>
-							<div class="pricing-price">
-								<p><sup>₹ </sup>14.00</p>
-							</div>
-							<div class="pricing-features">
-								<p>Express Lane</p>
-								<!-- <p>Clean and modern</p>
-								<p>Bootstrap & HTML5</p>
-								<p>24/7 support</p> -->
-							</div>
-							<div class="pricing_btn">
-								<p><a href="#"> Buy Now</a></p>
-							</div>							
-						</div>					
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="pricing">
-							<div class="pricing-title">
-								<p>Fast Lane</p>
-							</div>
-							<div class="pricing-price">
-								<p><sup>₹ </sup>12.00</p>
-							</div>
-							<div class="pricing-features">
-								<p>Fast Lane</p>
-							</div>
-							<div class="pricing_btn">
-								<p><a href="#"> Buy Now</a></p>
-							</div>							
-						</div>					
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="pricing">
-							<div class="pricing-title">
-								<p>Regular Lane</p>
-							</div>
-							<div class="pricing-price">
-								<p><sup>₹ </sup>10.00</p>
-							</div>
-							<div class="pricing-features">
-								<p>Regular Lane</p>
-							</div>
-							<div class="pricing_btn">
-								<p><a href="#"> Buy Now</a></p>
-							</div>							
-						</div>					
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="pricing">
-							<div class="pricing-title">
-								<p>Diagrams</p>
-							</div>
-							<div class="pricing-price">
-								<p><sup>₹ </sup>2.00 to 5.00</p>
-							</div>
-							<div class="pricing-features">
-								<p>Diagrams</p>
-							</div>
-							<div class="pricing_btn">
-								<p><a href="#"> Buy Now</a></p>
-							</div>							
-						</div>					
-					</div>	
-				</div><!--- END ROW -->
-			</div><!--- END CONTAINER -->
-		</section>
-<!--Pricing-->
+
 		
 
 <!--Footer-->
