--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@ input[type=file]::file-selector-button:hover {
 <header id="header_wrapper">
   <div class="container">
     <div class="header_box">
-      <div class="logo"><a href="#"><img src="static/logo.png" alt="logo" width="300px" style="filter: invert(100%);margin-top: -5%;margin-bottom: -5%;"></a></div>
+      <div class="logo"><a href="#"><img src="static/logo.png" alt="logo" width="300px" style="filter: invert(100%);margin-top: -10%;margin-bottom: -10%;"></a></div>
 	  <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
@@ -92,7 +92,7 @@ input[type=file]::file-selector-button:hover {
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>Say <strong> Goodbye </strong> to Assignment Stress</h2>
               <p>Let our experts handle your assignments while you focus on what matters most.</p>
-			  <a href="/order" id="ordbtn" >Make An Order</a>
+			  <a href="#pricing" id="ordbtn" >Make An Order</a>
                </div>
 			   
           </div>
