--- a/templates/order.html
+++ b/templates/order.html
@@ -48,7 +48,7 @@ input[type=file]::file-selector-button:hover {
 <header id="header_wrapper">
   <div class="container">
     <div class="header_box">
-      <div class="logo"><a href="/"><img src="static/logo.png" alt="logo" width="300px"></a></div>
+      <div class="logo"><a href="/"><img src="static/logo.png" alt="logo" width="300px" style="filter: invert(100%);margin-top: -5%;margin-bottom: -5%;"></a></div>
 	  <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
