--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@ input[type=file]::file-selector-button:hover {
 								<p>Work gets completed within 48 hrs.</p>
 							</div>
 							<div class="pricing_btn">
-								<p><a href="{% url 'index' %}?category=Fasts Lane">Make an order</a></p>
+								<p><a href="{% url 'index' %}?category=Fast Lane">Make an order</a></p>
 							</div>							
 						</div>					
 					</div>
