New with DB functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>SkipWork</title>
-<link rel="icon" href="static/img/favicon.png" type="icon">
+<link rel="icon" href="static/favicon.png" type="icon">
 <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="static/css/style.css" rel="stylesheet" type="text/css"> 
 <link href="static/css/font-awesome.css" rel="stylesheet" type="text/css"> 
