--- a/templates/order.html
+++ b/templates/order.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>SkipWork</title>
-<link rel="icon" href="static/img/favicon.png" type="icon">
+<link rel="icon" href="static/favicon.png" type="icon">
 <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="static/css/style.css" rel="stylesheet" type="text/css"> 
 <link href="static/css/font-awesome.css" rel="stylesheet" type="text/css"> 
@@ -73,7 +73,7 @@ input[type=file]::file-selector-button:hover {
       <div class="flex flex-col text-center w-full mb-12" >
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="font-size: x-large;">Make an order</h1>
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Please upload the pdf and provide necessary details below.</p>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Category: <input type="text" name="category" id="" value="{{category}}"style="text-align: center;"> </p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;font-weight: bold;">Category: <input type="text" name="category" id="" value="{{category}}"style="text-align: center;"> </p>
       </div>
       <div class="lg:w-1/2 md:w-2/3 mx-auto">
         <div class="flex flex-wrap -m-2">
