--- a/templates/db.html
+++ b/templates/db.html
@@ -9,7 +9,12 @@
         <img src="static/db.png" alt="" style="width:15%;">
         <span class="ml-3 text-xl xl:block lg:hidden">SkipWork</span>
       </a>
-      
+      <a href="/">
+      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" style="margin-left: 500%;background-color: grey;color: white;">Logout
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </button></a>
     </div>
   </header>
 
