--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,12 @@
 <html style="background-color: #111827;">
   <link rel="icon" href="static/favicon.png" type="icon">
-  <title>SkipWork-DB</title>    
+  <title>SkipWork-DB</title>
+  <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert" id="thediv" style="text-align: center;">
+    <strong class="font-bold" >{{message}}</strong>
+    <span id="closing" class="absolute top-0 bottom-0 right-0 px-4 py-3">
+      <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+    </span>
+  </div>    
         <form action="/login" method="post" >
             {% csrf_token %}
         <section class="text-gray-400 bg-gray-900 body-font relative" >
@@ -35,3 +41,9 @@
         </form>
 </html>
 <script src="https://cdn.tailwindcss.com"></script>
+<script>
+  btn = document.getElementById('closing')
+  btn.addEventListener('click',()=>{
+    box = document.getElementById('thediv').style.display='none'
+  })
+</script>
