--- a/templates/intermediate.html
+++ b/templates/intermediate.html
@@ -67,13 +67,8 @@ input[type=file]::file-selector-button:hover {
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav" style="margin-top: 20px;">
-			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
-			  <li><a href="#pricing" class="scroll-link">Pricing</a></li>
-			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
-			  <li><a href="#service" class="scroll-link">Services</a></li>
-			  <!-- <li><a href="#gallery-1" class="scroll-link">Portfolio</a></li> -->
-			  <!-- <li><a href="#team" class="scroll-link">Team</a></li>  -->
-			  <li><a href="#contact" class="scroll-link">Contact</a></li>
+			  <li class="active"><a href="/" class="scroll-link"><- Back to Home</a></li>
+			  
 			</ul>
       </div>
 	 </nav>
