--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,6 @@ input[type=file]::file-selector-button:hover {
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>Say <strong> Goodbye </strong> to Assignment Stress</h2>
               <p>Let our experts handle your assignments while you focus on what matters most.</p>
-			  <a href="#pricing" id="ordbtn" >Make An Order</a>
                </div>
 			   
           </div>
@@ -115,7 +114,7 @@ input[type=file]::file-selector-button:hover {
 		
 		  <div class="col-lg-4">
 			<div class="service_block">
-			  <div class="service_icon delay-03s animated wow  zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: yellow;color: black;"><a href="{% url 'index' %}?work=Assignment">Order</a></button> </div>
+			  <div class="service_icon delay-03s animated wow  zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;color: black;"><a href="{% url 'index' %}?work=Assignment" style="color: black;">Order</a></button> </div>
 			  <h3 class="animated fadeInUp wow">Assignment</h3>
 			  <p class="animated fadeInDown wow">Efficiency is a principle that guides every aspect of our assignment writing service. We understand that time is of the essence in the academic world, and our dedication to delivering assignments that stand out while adhering to strict deadlines sets us apart. </p>
 			</div>
@@ -123,14 +122,14 @@ input[type=file]::file-selector-button:hover {
 		  <div class="col-lg-4 borderLeft" >			
 			<div class="service_block">
 			  <div class="service_icon icon2  delay-03s animated wow zoomIn">
-				<button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: yellow;color: black;"><a href="{% url 'index' %}?work=Record">Order</a></button> </div>
+				<button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;color: black;"><a href="{% url 'index' %}?work=Record" style="color: black;">Order</a></button> </div>
 			  <h3 class="animated fadeInUp wow">Record</h3>
 			  <p class="animated fadeInDown wow">We excel in meticulously managing college lab records. With precision and attention to detail, we ensure that all lab activities are documented. Our streamlined approach to record-keeping guarantees that valuable insights are captured.</p>
 			</div>
 		  </div>
 		  <div class="col-lg-4 borderLeft">
 			<div class="service_block">
-			  <div class="service_icon icon3  delay-03s animated wow zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: yellow;color: black;"><a href="{% url 'index' %}?work=Chart Work">Order</a></button> </div>
+			  <div class="service_icon icon3  delay-03s animated wow zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;"><a href="{% url 'index' %}?work=Chart Work" style="color: black;">Order</a></button> </div>
 			  <h3 class="animated fadeInUp wow">Chart Works</h3>
 			  <p class="animated fadeInDown wow">Elevate your artistic projects with our premium charting services. Transform your creative vision into stunning visual representations that captivate and inspire. Let us bring your craft and artistry to life through our expert charting expertise.</p>
 			</div>
