New with separate order pages

--- a/templates/intermediate_chart.html
+++ b/templates/intermediate_chart.html
@@ -83,27 +83,9 @@ input[type=file]::file-selector-button:hover {
 	<div class="container">
 			    <h2><strong>PRICING</strong></h2>
     
-				<div class="row"> 				
-					<div class="col-md-4 col-sm-3 col-xs-12">
-						<div class="pricing">
-							<div class="pricing-title">
-								<p>Express Lane</p>
-							</div>
-							<div class="pricing-price">
-								<p><sup>₹ </sup>14.00</p>
-							</div>
-							<div class="pricing-features">
-								<p>Work gets completed within 24 hrs.</p>
-								<!-- <p>Clean and modern</p>
-								<p>Bootstrap & HTML5</p>
-								<p>24/7 support</p> -->
-							</div>
-							<div class="pricing_btn">
-								<p><a href="{% url 'intermediate' %}?category=Express Lane&work={{work}}">Make an order</a></p>
-							</div>							
-						</div>					
-					</div>
-					<div class="col-md-4 col-sm-3 col-xs-12">
+				<div class="row" style="align-items: center;"> 				
+					
+					<div class="col-md-6 col-sm-3 col-xs-12">
 						<div class="pricing">
 							<div class="pricing-title">
 								<p>Fast Lane</p>
@@ -119,7 +101,7 @@ input[type=file]::file-selector-button:hover {
 							</div>							
 						</div>					
 					</div>
-					<div class="col-md-4 col-sm-3 col-xs-12">
+					<div class="col-md-6 col-sm-3 col-xs-12">
 						<div class="pricing">
 							<div class="pricing-title">
 								<p>Regular Lane</p>
