--- a/templates/index.html
+++ b/templates/index.html
@@ -69,9 +69,8 @@ input[type=file]::file-selector-button:hover {
 			<ul class="nav navbar-nav" id="mainNav" style="margin-top: 20px;">
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
 			  <li><a href="#service" class="scroll-link">Services</a></li>
+			  <li><a href="#service" class="scroll-link">Subscription</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
-			  <!-- <li><a href="#gallery-1" class="scroll-link">Portfolio</a></li> -->
-			  <!-- <li><a href="#team" class="scroll-link">Team</a></li>  -->
 			  <li><a href="#contact" class="scroll-link">Contact</a></li>
 			</ul>
       </div>
@@ -105,7 +104,7 @@ input[type=file]::file-selector-button:hover {
   </div>
 </section>
 <!--Hero_Section--> 
-<!--Pricing-->
+<!--Service-->
 <section  id="service">
 	<div class="container">
 	  <h2>Services</h2>
@@ -138,6 +137,27 @@ input[type=file]::file-selector-button:hover {
 	  
 	</div>
   </section>
+
+  <section class="text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+        <br>
+        <br>
+        
+        <h1 style="color: black;">Subscribe to SkipWork
+          <br class="hidden lg:inline-block">
+        </h1>
+        <p class="mb-8 leading-relaxed">Empower your academic journey and stay ahead with our top-notch charting services. Plus, subscribe to our website for the latest updates, exclusive offers, and a seamless learning experience that goes beyond expectations.</p>
+        <div class="flex justify-center">
+    
+          <button class="ml-4 inline-flex  py-2 px-6 " style="background-color: blue;font-size: large;color: white;border-radius: 10px;padding: 1%;"><a href="/" style="color: white;">Subscribe Here</a></button>
+        </div>
+      </div>
+    </div>
+    <br>
+    <hr>
+  </section>
+
 <section id="aboutUs"><!--Aboutus-->
 <div class="inner_wrapper">
   <div class="container">
@@ -261,7 +281,6 @@ input[type=file]::file-selector-button:hover {
 <script type="text/javascript" src="static/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="static/js/jquery.isotope.js"></script>
 <script type="text/javascript" src="static/js/wow.js"></script> 
-
 
 <script src="static/js/jquery.fancybox.pack.js"></script>
 <script src="static/js/jquery.fancybox-media.js"></script>   
