--- a/templates/index.html
+++ b/templates/index.html
@@ -125,9 +125,10 @@ input[type=file]::file-selector-button:hover {
 			  <p class="animated fadeInDown wow">We excel in meticulously managing college lab records. With precision and attention to detail, we ensure that all lab activities are documented. Our streamlined approach to record-keeping guarantees that valuable insights are captured.</p>
 			</div>
 		  </div>
-		  <div class="col-lg-4 borderLeft">
+		  <div class="col-lg-4 borderLeft" style="opacity: 0.5;">
 			<div class="service_block">
-			  <div class="service_icon icon3  delay-03s animated wow zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;"><a href="{% url 'index' %}?work=Chart Work" style="color: black;">Order</a></button> </div>
+			  <div class="service_icon icon3  delay-03s animated wow zoomIn"><button style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;">
+          <a href="/" style="color: black;">Order</a></button> </div>
 			  <h3 class="animated fadeInUp wow">Chart Works</h3>
 			  <p class="animated fadeInDown wow">Elevate your artistic projects with our premium charting services. Transform your creative vision into stunning visual representations that captivate and inspire. Let us bring your craft and artistry to life through our expert charting expertise.</p>
 			</div>
