--- a/templates/order_r.html
+++ b/templates/order_r.html
@@ -41,6 +41,18 @@ input[type=file]::file-selector-button:hover {
     color: gray; /* Change this color to your desired color */
     margin-left: 5px;
   }
+    /* Default styles for input fields in a row */
+.form-container .p-2 {
+  width: 50%; /* Display inputs in two columns by default */
+  box-sizing: border-box;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  .form-container .p-2 {
+    width: 100%; /* Display inputs in a single column on mobile devices */
+  }
+}
 </style>
 <body>
 
@@ -65,6 +77,7 @@ input[type=file]::file-selector-button:hover {
 </header>
 <!--Header_section--> 
 <!--Order_section--> 
+<div class="form-container">
 <form action="/order" method="post" enctype="multipart/form-data">
 {% csrf_token%}
 
@@ -150,6 +163,7 @@ input[type=file]::file-selector-button:hover {
     </div>
   </section>		
 </form>
+</div>
 <!--Footer-->
 <footer class="footer_wrapper" id="contact">
   <div class="container">
