--- a/templates/payment.html
+++ b/templates/payment.html
@@ -77,14 +77,14 @@
         <img class="object-cover object-center rounded" alt="hero" src="static/img/qr.jpg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-40 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Payment: ₹100/-
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Payment: ₹{{cost}}/-
         </h1>
         <p class="mb-8 leading-relaxed">Please upload the screenshot of the payment.</p>
         <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="pdf" id="multiple_files" type="file" required style="width: 40%;margin-bottom: 2%;">
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-blue-500 border-0  focus:outline-none hover:bg-indigo-600 rounded text-x1 lg:text-2xl px-10 py-6" type="submit">Submit</button>
 
-          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-6 px-10 focus:outline-none hover:bg-gray-200 rounded lg:text-2xl ">Cancel</button>
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-6 px-10 focus:outline-none hover:bg-gray-200 rounded lg:text-2xl "><a href="/">Cancel</a></button>
         </div>
       </div>
     </div>
