--- a/templates/payment.html
+++ b/templates/payment.html
@@ -71,6 +71,7 @@
     </div>
   </header>
   <!--Header_section-->
+  <form action="/payment" method="post" enctype="multipart/form-data">
   <section class="text-gray-600 body-font lg:ml-60">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:max-w-lg lg:w-full lg:ml-80  md:w-1/2 w-5/6 mb-10 md:mb-0">
@@ -82,6 +83,7 @@
         <p class="mb-8 leading-relaxed">Please upload the screenshot of the payment.</p>
         <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="pdf" id="multiple_files" type="file" required style="width: 40%;margin-bottom: 2%;">
         <div class="flex justify-center">
+          <input type="hidden" name="data" value="{{data}}">
           <button class="inline-flex text-white bg-blue-500 border-0  focus:outline-none hover:bg-indigo-600 rounded text-x1 lg:text-2xl px-10 py-6" type="submit">Submit</button>
 
           <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-6 px-10 focus:outline-none hover:bg-gray-200 rounded lg:text-2xl "><a href="/">Cancel</a></button>
@@ -89,7 +91,7 @@
       </div>
     </div>
   </section>
-
+</form>
   <!--Footer-->
   <footer class="footer_wrapper" id="contact">
     <div class="container">
