--- a/templates/index.html
+++ b/templates/index.html
@@ -160,31 +160,32 @@
 
     </div>
   </section>
+  <section id="hero_section" class="top_cont_outer">
+    <div class="hero_wrapper" style="background-color: aquamarine">
+      <div class="container">
+        <div class="hero_section">
+          <div class="row">
+            <div class="col-lg-5 col-sm-7">
+              <div class="top_left_cont zoomIn wow animated">
+                <h2><strong style="color: black;"> Subscribe to SkipWork </strong></h2>
+                <p style="color: rgb(53, 47, 47);">Empower your academic journey and stay ahead with our top-notch
+                  services. Plus, subscribe to our website for the latest updates, exclusive offers, and a seamless learning
+                  experience that goes beyond expectations.</p>
+                  <button style="background-color: black;color: white;padding: 3% 5%;font-size: larger;border-radius: 10%;">Subscribe</button>
+              </div>
 
-  <section class="text-gray-600 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div
-        class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-        <br>
-        <br>
-
-        <h1 style="color: black;">Subscribe to SkipWork
-          <br class="hidden lg:inline-block">
-        </h1>
-        <p class="mb-8 leading-relaxed">Empower your academic journey and stay ahead with our top-notch charting
-          services. Plus, subscribe to our website for the latest updates, exclusive offers, and a seamless learning
-          experience that goes beyond expectations.</p>
-        <div class="flex justify-center">
-
-          <button class="ml-4 inline-flex  py-2 px-6 "
-            style="background-color: blue;font-size: large;color: white;border-radius: 10px;padding: 1%;"><a href="/"
-              style="color: white;">Subscribe Here</a></button>
+            </div>
+            <div class="col-lg-7 col-sm-5">
+              <img src="static/subscribe.png" class="zoomIn wow animated" alt=""
+                style="position: relative;top: 30px;margin-bottom: 100px;" />
+              
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <br>
-    <hr>
   </section>
+
 
   <section id="aboutUs"><!--Aboutus-->
     <div class="inner_wrapper">
