--- a/templates/order_a.html
+++ b/templates/order_a.html
@@ -86,17 +86,18 @@ input[type=file]::file-selector-button:hover {
     <div class="container px-5 py-24 mx-auto" style="background-color: white;">
       <div class="flex flex-col text-center w-full mb-12" >
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="font-size: x-large;">Make an order</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Please upload the pdf and provide necessary details below.</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;">Please provide necessary details below.</p>
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;font-weight: bold;">Work: <input type="text" name="work" id="" value="{{work}}"style="text-align: center;"> </p>
         <p class="lg:w-2/3 mx-auto leading-relaxed text-base" style="font-size: medium;font-weight: bold;">Category: <input type="text" name="category" id="" value="{{category}}"style="text-align: center;"> </p>
       </div>
       <div class="lg:w-1/2 md:w-2/3 mx-auto">
         <div class="flex flex-wrap -m-2">
             
-<div style="width: 60%;position: relative;left: 20%;">
+ <div style="position: relative;left: 10%;" class="lg:w-4/5 md:w-4/5">
 
-    <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="pdf" id="multiple_files" type="file" required>
-</div>
+    {% comment %} <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="pdf" id="multiple_files" type="file" required> {% endcomment %}
+    <p style="font-weight: bolder;font-size: larger;">**Please upload the pdf of content during payment i.e, in the next page**</p>
+</div> 
 <!-- first name -->
           <div class="p-2 w-1/2">
             <div class="relative">
